Cleaning i3blocks conf

--- a/gui/i3/i3blocks.conf
+++ b/gui/i3/i3blocks.conf
@@ -112,9 +112,9 @@ interval=30
 #command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
 #interval=30
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+#[bandwidth]
+#command=~/.config/i3/scripts/bandwidth2
+#interval=persist
 
 # Battery indicator
 [battery]
@@ -145,10 +145,6 @@ interval=1
 #[keyboard-layout]
 #command=~/.config/i3/scripts/keyboard-layout
 #interval=2
-
-[keybindings]
-full_text=
-command=~/.config/i3/scripts/keyhint
 
 # power-profiles-daemon implementation:
 # needs package power-profiles-daemon installed and the service running see here:
