--- a/editor/vscode/profiles/-2caf332f/settings.json
+++ b/editor/vscode/profiles/-2caf332f/settings.json
@@ -44,11 +44,5 @@
         
         ]
     },
-    "explorer.confirmDragAndDrop": false,
-    "github.copilot.enable": {
-        "*": false,
-        "plaintext": false,
-        "markdown": false,
-        "scminput": false
-    }
+    "explorer.confirmDragAndDrop": false
 }
